--- a/K8S/mssql-plat-depl.yaml
+++ b/K8S/mssql-plat-depl.yaml
@@ -14,19 +14,19 @@ spec:
     spec:
       containers:
         - name: mssql
-          image: mcr.microsoft.com/mssql/server:2017-latest
+          image: mcr.microsoft.com/mssql/server:latest
           ports:
             - containerPort: 1433
           env:
-            - name: MSSQL_PID
-              value: "Express"
-            - name: ACCEPT_EULA
-              value: "Y"
-            - name: SA_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: mssql
-                  key: SA_PASSWORD
+          - name: MSSQL_PID
+            value: "Express"
+          - name: ACCEPT_EULA
+            value: "Y"
+          - name: SA_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: mssql
+                key: SA_PASSWORD
           volumeMounts:
           - mountPath: /var/opt/mssql/data
             name: mssqldb
@@ -44,10 +44,10 @@ spec:
   selector:
     app: mssql
   ports:
-    - name: mssql
-      protocol: TCP
-      port: 1443
-      targetPort: 1443
+  - name: mssql
+    protocol: TCP
+    port: 1433
+    targetPort: 1433
 ---
 apiVersion: v1
 kind: Service
@@ -59,6 +59,5 @@ spec:
     app: mssql
   ports:
   - protocol: TCP
-    port: 1443
-    targetPort: 1443
-        
+    port: 1433
+    targetPort: 1433
