--- a/PlatformService/appsettings.Development.json
+++ b/PlatformService/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "CommandService": "http://localhost:5027/api/c/platforms"
+  "CommandService": "http://localhost:5027/api/c/platforms",
+  "ConnectionStrings":{
+    "PlatformsConn": "Server=localhost\\SQLEXPRESS,1433;Initial Catalog=platformsdb;Integrated Security=True;Trusted Connection=Yes;"
+  }
 }
