--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -1,3 +1,6 @@
 {
-  "CommandService": "http://commands-clusterip-srv:80/api/c/platforms"
+  "CommandService": "http://commands-clusterip-srv:80/api/c/platforms",
+  "ConnectionStrings":{
+    "PlatformsConn": "Server=mssqlclusterip-srv,1433;Initial Catalog=platformsdb;User ID=sa;Password=i?;8EgRITTj'yS*:4=w;"
+  }
 }
